--- a/frontend/src/Containers/FlavoursAndServings/Sections/FlavourServingGuide.css
+++ b/frontend/src/Containers/FlavoursAndServings/Sections/FlavourServingGuide.css
@@ -5,7 +5,7 @@
   font-family: "Sans-serif";
   color: #4a403a;
   margin: 0 auto;
-  padding: 5rem 15rem;
+  padding: 2rem 15rem;
 }
 
 .guide-content {
