--- a/frontend/src/Containers/FlavoursAndServings/Sections/FlavourServingSymphony.css
+++ b/frontend/src/Containers/FlavoursAndServings/Sections/FlavourServingSymphony.css
@@ -5,7 +5,7 @@
   font-family: "Sans-serif";
   color: black;
   margin: 0 auto;
-  padding: 8rem 20rem;
+  padding: 4rem 20rem 2rem 20rem;
 }
 
 .guide-text {
