--- a/frontend/src/Containers/FlavoursAndServings/Sections/OurFlavour.css
+++ b/frontend/src/Containers/FlavoursAndServings/Sections/OurFlavour.css
@@ -1,7 +1,7 @@
 /* Flavours and Servings Section */
 .flavours-and-servings {
   margin: 0 auto;
-  padding: 8rem 20rem;
+  padding: 8rem 20rem 2rem 20rem;
   align-items: center;
   justify-content: center;
   background-color: #fcf9e9; /* Light cream background */
