--- a/frontend/src/Containers/FlavoursAndServings/Sections/PlanYourCake.css
+++ b/frontend/src/Containers/FlavoursAndServings/Sections/PlanYourCake.css
@@ -6,7 +6,7 @@
   font-family: "Sans-serif";
   color: #4a403a;
   margin: 0 auto 0 auto;
-  padding: 8rem 15rem 8rem 15rem;
+  padding: 2rem 15rem 1rem 15rem;
 }
 
 .plan-your-cake h1 {
