--- a/frontend/src/Containers/FlavoursAndServings/Sections/RoundCakeServingGuide.css
+++ b/frontend/src/Containers/FlavoursAndServings/Sections/RoundCakeServingGuide.css
@@ -8,7 +8,7 @@ p.description {
 }
 
 .serving-guide {
-  background-color: #f9f9f9;
+  background-color: #FCF9E9;
 }
 
 .serving-row {
